<resources>
    <string name="app_name">WOLO</string>
    <string name="welcome_text">ДОБРО ПОЖАЛОВАТЬ В ИГРУ</string>
    <string name="weOnlyLiveOnce_Text">«We Only Live Once»</string>
    <string name="enter_names_text">Пожалуйста, впишите все имена участников.</string>
    <string name="max_quantity_players_text">Максимальное количество участников: 8 человек</string>
    <string name="startGame_button_text">НАЧАТЬ ИГРУ</string>
    <string name="close_button">Закрыть</string>
    <string name="newUser_text">Введите имя участника</string>
    <string name="addPlayer_text">+</string>
    <string name="you_choosed_theme">ВЫ ВЫБРАЛИ ТЕМАТИКУ:</string>
    <string name="delete_gamer">Удалить игрока</string>
    <string name="rules">Правила</string>
    <string name="game_store">Игровой магазин</string>
    <string name="alter_dialog_quite_main_menu">Выйти в главное меню?</string>
    <string name="alter_dialog_quite_app">Выйти из игры?</string>
    <string name="dialog_button_ok">Ок</string>
    <string name="dialog_button_cancel">Отмена</string>
    <string name="text_loading">Загрузка данных…</string>
    <string name="data_is_loaded">Данные загружены</string>
    <string name="attention_text">Обратите внимание!</string>
    <string name="attention_note">Вы можете выгодно приобрести сразу все колоды!</string>
    <string name="who_start_game_text">Игру начинает игрок </string>
    <string name="who_continue_game_text">Теперь очередь игрока </string>
    <string name="bottle_pointed_to_text">БУТЫЛКА УКАЗАЛА НА ИГРОКА:</string>
    <string name="player_who_spun_the_bottle_text">Крутивший бутылку, выбирает тематику и обязательно выполняет задание!</string>
    <string name="done">ДЕЛО СДЕЛАНО!</string>
    <string name="need_to_add_players1">Необходимо добавить минимум 2-х игроков!</string>
    <string name="need_to_add_players2">Необходимо добавить еще минимум 1 игрока!</string>
</resources>
