<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckedTextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="top|center"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp" />

        <CheckedTextView
            android:id="@+id/we_only_live_once_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|top"
            android:text="@string/weOnlyLiveOnce_Text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">


        <CheckedTextView
            android:id="@+id/enter_names_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/enter_names_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp" />

        <CheckedTextView
            android:id="@+id/max_quantity_players_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/max_quantity_players_text"
            android:textAlignment="center"
            android:textColor="#d62121"
            android:textSize="@dimen/text_15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/new_user"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/filed"
                android:hint="@string/newUser_text"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/green_900"
                android:textSize="14sp"
                android:typeface="sans"
                android:visibility="visible"
                tools:ignore="Autofill,NestedWeights,UnusedAttribute" />

            <Button
                android:id="@+id/add_player"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="15dp"
                android:background="@color/black"
                android:text="@string/addPlayer_text"
                android:textAlignment="center"
                android:textColor="#Fff"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gamers_lists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:clipToPadding="false"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_row" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button"
            android:text="@string/startGame_button_text"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>